package com.omar.assignment.handlers;

public interface ISrvDeleteHandler extends ISrvHandler{
}
