package com.omar.assignment.handlers;

public interface ISrvGetHandler extends ISrvHandler{
}
