package com.omar.assignment.handlers;

public interface ISrvPutHandler extends ISrvHandler{
}
